fix sidebar z-index

--- a/madmin/static/style/madmin.css
+++ b/madmin/static/style/madmin.css
@@ -108,6 +108,7 @@ div.container[role="main"] {
 
 .leaflet-sidebar {
 	top: 60px;
+	z-index: 1000;
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
